rearchitect init commit