@@ -1,9 +1,15 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
+  <parent>
+    <groupId>com.ebay.raptorio.platform</groupId>
+    <artifactId>raptor-io-parent</artifactId>
+    <version>0.4.0-RELEASE</version>
+    <relativePath/> <!-- lookup parent from repository -->
+  </parent>
   <groupId>com.ebay.traffic</groupId>
   <artifactId>chocolate</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>3.0-SNAPSHOT</version>
   <name>chocolate</name>
   <packaging>pom</packaging>
 
@@ -20,14 +26,22 @@
     <hadoop.version>2.7.3</hadoop.version>
     <spark.version>2.2.0</spark.version>
     <kafka.version>0.10.2.0</kafka.version>
+    <avro.version>1.7.7</avro.version>
+    <zookeeper.version>3.4.6</zookeeper.version>
+    <curator.version>2.7.1</curator.version>
+    <couchbase.client.version>2.5.3</couchbase.client.version>
     <hbase.version>1.1.2</hbase.version>
+    <rheos.version>0.0.7-SNAPSHOT</rheos.version>
     <jacoco.dump.skip>true</jacoco.dump.skip>
     <chocolate.common.version>2.4.2-RELEASE</chocolate.common.version>
   </properties>
 
   <modules>
     <module>common</module>
+    <module>spark-common</module>
+    <module>kafka-common</module>
     <module>capping-rules</module>
+    <module>filter</module>
     <module>ingester</module>
     <module>tools</module>
   </modules>
@@ -65,6 +79,24 @@
       </dependency>
 
       <dependency>
+        <groupId>org.apache.avro</groupId>
+        <artifactId>avro</artifactId>
+        <version>${avro.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>org.apache.zookeeper</groupId>
+        <artifactId>zookeeper</artifactId>
+        <version>${zookeeper.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>org.apache.curator</groupId>
+        <artifactId>curator-recipes</artifactId>
+        <version>${curator.version}</version>
+      </dependency>
+
+      <dependency>
         <groupId>org.apache.hbase</groupId>
         <artifactId>hbase-client</artifactId>
         <version>${hbase.version}</version>
@@ -74,6 +106,18 @@
         <groupId>org.apache.hbase</groupId>
         <artifactId>hbase-server</artifactId>
         <version>${hbase.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>org.apache.kafka</groupId>
+        <artifactId>kafka_2.10</artifactId>
+        <version>${kafka.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>com.couchbase.client</groupId>
+        <artifactId>java-client</artifactId>
+        <version>${couchbase.client.version}</version>
       </dependency>
 
       <dependency>
@@ -101,6 +145,7 @@
         <version>1.2.1</version>
       </dependency>
 
+<!--
       <dependency>
         <groupId>org.slf4j</groupId>
         <artifactId>slf4j-api</artifactId>
@@ -112,6 +157,7 @@
         <artifactId>slf4j-log4j12</artifactId>
         <version>${slf4j.version}</version>
       </dependency>
+-->
 
       <dependency>
         <groupId>log4j</groupId>
@@ -131,11 +177,6 @@
         <version>${chocolate.common.version}</version>
       </dependency>
 
-      <dependency>
-        <groupId>org.apache.avro</groupId>
-        <artifactId>avro</artifactId>
-        <version>1.8.2</version>
-      </dependency>
       <dependency>
         <groupId>org.apache.flume</groupId>
         <artifactId>flume-ng-sdk</artifactId>
@@ -279,6 +320,19 @@
               <id>test</id>
               <goals>
                 <goal>test</goal>
+              </goals>
+            </execution>
+          </executions>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-failsafe-plugin</artifactId>
+          <version>2.19.1</version>
+          <executions>
+            <execution>
+              <goals>
+                <goal>integration-test</goal>
+                <goal>verify</goal>
               </goals>
             </execution>
           </executions>
@@ -444,8 +498,64 @@
           <destFile>${basedir}/target/jacoco-unit.exe</destFile>
           <propertyName>surefireArgLine</propertyName>
           <excludes>
-
           </excludes>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.18.1</version>
+        <configuration>
+          <forkMode>once</forkMode>
+          <forkCount>1.0C</forkCount>
+          <reuseForks>false</reuseForks>
+          <argLine>-Xverify:none -Xmx1024m ${surefireArgLine}</argLine>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-failsafe-plugin</artifactId>
+        <configuration>
+          <argLine>${failsafeArgLine}</argLine>
+        </configuration>
+        <executions>
+          <execution>
+            <goals>
+              <goal>integration-test</goal>
+              <goal>verify</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+
+      <!-- static code scan plugins -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-checkstyle-plugin</artifactId>
+      </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>findbugs-maven-plugin</artifactId>
+        <configuration>
+          <findbugsXmlOutput>true</findbugsXmlOutput>
+          <findbugsXmlWithMessages>true</findbugsXmlWithMessages>
+          <xmlOutput>true</xmlOutput>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-pmd-plugin</artifactId>
+        <configuration>
+          <linkXref>true</linkXref>
+          <sourceEncoding>utf-8</sourceEncoding>
+          <minimumTokens>100</minimumTokens>
+          <excludes>
+            <exclude>**/*Bean.java</exclude>
+            <exclude>**/*Test.java</exclude>
+          </excludes>
+          <excludeRoots>
+            <excludeRoot>target/generated-sources/*.*</excludeRoot>
+          </excludeRoots>
         </configuration>
       </plugin>
     </plugins>
